# reddit-ai-agents-digest

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.codex/agents/: architect.toml  developer.toml  doc-reader-writer.toml  explorer-reviewer.toml  sdet.toml  worker.toml
.codex/environments/: environment.toml
.github/workflows/: daily-digest.yml  unit-tests.yml
config/: scoring.yaml  subreddits.yaml
docs/: architecture.md  artifact-schemas.md  backlog.md  digest-format.md  gcp-wif-setup.md  invariants.md  operations.md  pipeline-stages.md  rerun-runbook.md  subagents.md
scripts/: configure_codex_worktree_env.sh  run_ai_launchd.sh  run_markdown_with_env.sh
tests/: conftest.py  test_adr_docs.py  test_artifact_schema_doc.py  test_automation_helper.py  test_base.py  test_cli.py  test_comment.py  test_common.py  test_config.py  test_digest.py  test_extractors.py  test_fixtures.py  test_gcp_setup_doc.py  test_github_actions_workflow.py  test_google_auth_docs.py  test_google_sheets.py  test_helper_coverage.py  test_impact.py  test_imports.py  test_insight.py  test_invariants_doc.py  test_launchd_plist.py  test_markdown.py  test_markdown_contract.py  test_markdown_docs.py  test_markdown_output.py  test_models.py  test_models_digest_module.py  test_novelty.py  test_openai_client.py  test_openai_suggestions.py  test_openai_usage.py  test_outputs_digest_module.py  test_pipeline.py  test_pipeline_stage_docs.py  test_pipeline_stages.py  test_post.py  test_preflight.py  test_public_reddit_json.py  test_reddit_comments.py  (+17 more)
(+54 files in other folders)
