[project]
name = "reddit-ai-agents-digest"
version = "0.1.0"
description = "Daily Reddit intelligence pipeline for AI agents, AI-enhanced development, and testing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "gspread>=6.1.4",
  "google-auth>=2.39.0",
  "praw>=7.8.1",
]

[project.scripts]
reddit-digest = "reddit_digest.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
